src/objects/DF_Event__c.object
<CustomObject>
    <fields>
        <fullName>Address_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_On_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available On Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCG_Area_Name__c</fullName>
        <label>CCG Area Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCG_Region_Name__c</fullName>
        <label>CCG Region Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champ_Fdback_Recommendation_Explanation__c</fullName>
        <label>Champ Fdback Recommendation Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Champ_Feedback_Content_Understand_Action__c</fullName>
        <label>Champ Feedback Content Understand&amp;Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Confirmation_of_Attendees__c</fullName>
        <label>Champion Confirmation of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Content_Activity1__c</fullName>
        <label>Champion Feedback Content Activity1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Content_Activity2__c</fullName>
        <label>Champion Feedback Content Activity2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Content_Analogy__c</fullName>
        <label>Champion Feedback Content Analogy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Content_Badges__c</fullName>
        <label>Champion Feedback Content Badges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Content_Intro__c</fullName>
        <label>Champion Feedback Content Intro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Content_Recap__c</fullName>
        <label>Champion Feedback Content Recap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Content__c</fullName>
        <label>Champion Feedback Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Curriculum_Deviation__c</fullName>
        <inlineHelpText>Did the host ask you to change your information session or include content not covered in a normal information session?</inlineHelpText>
        <label>Champion Feedback Curriculum Deviation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Group_Awareness__c</fullName>
        <label>Champion Feedback Group Awareness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Group_Response__c</fullName>
        <label>Champion Feedback Group Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Host_Communication__c</fullName>
        <label>Champion Feedback Host Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Host_Welcome__c</fullName>
        <label>Champion Feedback Host Welcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Quality_of_Venue__c</fullName>
        <label>Champion Feedback Quality of Venue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Session_Duration__c</fullName>
        <label>Champion Feedback Session Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Session_Owner__c</fullName>
        <description>You answered &apos;No&apos; to one or more of the above.</description>
        <label>Champion Feedback Session Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This boolean shows or hides the &quot;Tell us how your session went&quot; button for requested info sessions</description>
        <label>Champion Feedback Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Summary_Comments__c</fullName>
        <label>Champion Feedback Summary Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Summary_Rating__c</fullName>
        <label>Champion Feedback Summary Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very poor</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Summary_Recommend__c</fullName>
        <inlineHelpText>Would you recommend the host as one that Dementia Friends should support with further requests?</inlineHelpText>
        <label>Champion Feedback Summary Recommend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Feedback_Venue_Resources__c</fullName>
        <label>Champion Feedback Venue Resources</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Champion_Group_Session_Owner__c</fullName>
        <label>Champion Group Session Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Commissioning_Group__c</fullName>
        <label>Clinical Commissioning Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <inlineHelpText>expected hire cost of a venue for an event</inlineHelpText>
        <label>Cost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_Name__c</fullName>
        <label>County Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DFC_First_Month_after_Training__c</fullName>
        <description>Calculate delta between event date and date of champion.If it is greater than o and less than 30  then the field displays true.</description>
        <formula>DATEVALUE(Event_Date_Time__c) - Session_Organiser__r.Date_of_Champion_Training__c &gt;=0  &amp;&amp;  DATEVALUE(Event_Date_Time__c) - Session_Organiser__r.Date_of_Champion_Training__c &lt;=30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DFC First Month After Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DFC_Second_Month_after_Training__c</fullName>
        <description>Calculate delta between event date and date of champion.If it is greater than 30 and less than 60  then the field displays true.</description>
        <formula>DATEVALUE(Event_Date_Time__c) - Session_Organiser__r.Date_of_Champion_Training__c &gt;30  &amp;&amp;  DATEVALUE(Event_Date_Time__c) - Session_Organiser__r.Date_of_Champion_Training__c &lt;=60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DFC Second Month After Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DFC_Third_Month_after_Training__c</fullName>
        <description>Calculate delta between event date and date of champion.If it is greater than 60 and less than 90  then the field displays true.</description>
        <formula>DATEVALUE(Event_Date_Time__c) - Session_Organiser__r.Date_of_Champion_Training__c &gt;60  &amp;&amp;  DATEVALUE(Event_Date_Time__c) - Session_Organiser__r.Date_of_Champion_Training__c &lt;=90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DFC Third Month After Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Loader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Loader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dial_in_details__c</fullName>
        <label>Dial in details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <label>District Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date_Time__c</fullName>
        <label>Event Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <formula>datevalue(Event_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_End_Date_Time__c</fullName>
        <label>Event End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <formula>DATEVALUE( Event_End_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Event Ext Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Football_Team__c</fullName>
        <label>Football Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Football_Teams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Further_request_details__c</fullName>
        <label>Further request details</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Government_Office_Name__c</fullName>
        <label>Government Office Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing_loop_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hearing loop available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Host_Feedback_Champion_Arrival_Time__c</fullName>
        <inlineHelpText>Arrive on time</inlineHelpText>
        <label>Host Feedback Champion Arrival Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Champion_Communication__c</fullName>
        <inlineHelpText>Communicate with you in a timely manner when finalising arrangements</inlineHelpText>
        <label>Host Feedback Champion Communication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Champion_Delivery__c</fullName>
        <inlineHelpText>Deliver the session in a clear and engaging way</inlineHelpText>
        <label>Host Feedback Champion Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Champion_Manners__c</fullName>
        <inlineHelpText>Treat attendees with respect and courtesy</inlineHelpText>
        <label>Host Feedback Champion Manners</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Champion_Positivity__c</fullName>
        <inlineHelpText>Host Feedback Champion Positivity</inlineHelpText>
        <label>Host Feedback Champion Positivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Champion_Preparation__c</fullName>
        <inlineHelpText>Come prepared with appropriate resources</inlineHelpText>
        <label>Host Feedback Champion Preparation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Champion__c</fullName>
        <label>Host Feedback Champion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content_Activity1__c</fullName>
        <inlineHelpText>Bingo</inlineHelpText>
        <label>Host Feedback Content Activity1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content_Activity2__c</fullName>
        <inlineHelpText>‘Who is right?’ activity or ‘Making a cup of tea’ activity</inlineHelpText>
        <label>Host Feedback Content Activity2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content_Analogy__c</fullName>
        <inlineHelpText>Bookcase analogy</inlineHelpText>
        <label>Host Feedback Content Analogy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content_Badges__c</fullName>
        <inlineHelpText>Distribution and explanation of badges, info cards and action mailers</inlineHelpText>
        <label>Host Feedback Content Badges</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content_Expectations__c</fullName>
        <inlineHelpText>Did the information session meet your expectations, based on the information you received beforehand?</inlineHelpText>
        <label>Host Feedback Content Expectations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content_Intro__c</fullName>
        <inlineHelpText>Short introduction</inlineHelpText>
        <label>Host Feedback Content Intro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content_Recap__c</fullName>
        <inlineHelpText>Recap of five key messages</inlineHelpText>
        <label>Host Feedback Content Recap</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content_Understand_Action__c</fullName>
        <inlineHelpText>Turning understanding into action (and committing to an action)</inlineHelpText>
        <label>Host Feedback Content Understand&amp;Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Content__c</fullName>
        <label>Host Feedback Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Host_Feedback_Recommendation_Explanation__c</fullName>
        <label>Host Feedback Recommendation Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Host_Feedback_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This boolean shows or hides the &quot;Tell us how your session went&quot; button for requested info sessions</description>
        <label>Host Feedback Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Host_Feedback_Summary_Comments__c</fullName>
        <label>Host Feedback Summary Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Host_Feedback_Summary_Rating__c</fullName>
        <label>Host Feedback Summary Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very poor</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Very good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Feedback_Summary_Recommend__c</fullName>
        <inlineHelpText>Would you recommend the Dementia Friends initiative to other organisations?</inlineHelpText>
        <label>Host Feedback Summary Recommend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Last_Event__c</fullName>
        <formula>Event_Date_Time__c =  Session_Organiser__r.Latest_Friends_Session_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Last Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LSOA_Name__c</fullName>
        <label>LSOA Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lea_Name__c</fullName>
        <label>Lea Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Less_than_7_days_before_event_date_pref1__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Timebased workflow checks this box</inlineHelpText>
        <label>Less than 7 days before event date pref1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Less_than_7_days_before_event_date_pref2__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Time-based workflow checks this</inlineHelpText>
        <label>Less than 7 days before event date pref2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Less_than_7_days_before_event_date_pref3__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Time-based workflow checks this</inlineHelpText>
        <label>Less than 7 days before event date pref3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Geographic_Details__c</fullName>
        <label>Location Geographic Details</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MSOA_Name__c</fullName>
        <label>MSOA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Preference_Date__c</fullName>
        <formula>IF(
    AND(
        ISBLANK(Preference_1_Date__c),
        ISBLANK(Preference_2_Date__c),
        ISBLANK(Preference_3_Date__c)
    ),
    NULL,
    DATE(1900, 01, 01) + 
    MAX(
        BLANKVALUE(Preference_1_Date__c, DATE(1900, 01, 01)) - DATE(1900, 01, 01),
        BLANKVALUE(Preference_2_Date__c, DATE(1900, 01, 01)) - DATE(1900, 01, 01),
        BLANKVALUE(Preference_3_Date__c, DATE(1900, 01, 01)) - DATE(1900, 01, 01)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Preference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Min_Preference_Date__c</fullName>
        <formula>IF(
    AND(
        ISBLANK(Preference_1_Date__c),
        ISBLANK(Preference_2_Date__c),
        ISBLANK(Preference_3_Date__c)
    ),
    NULL,
    DATE(2099, 01, 01) + 
    MIN(
        BLANKVALUE(Preference_1_Date__c, DATE(2099, 01, 01)) - DATE(2099, 01, 01),
        BLANKVALUE(Preference_2_Date__c, DATE(2099, 01, 01)) - DATE(2099, 01, 01),
        BLANKVALUE(Preference_3_Date__c, DATE(2099, 01, 01)) - DATE(2099, 01, 01)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Min Preference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attendee_Records__c</fullName>
        <label>Number Of Attendees Booked</label>
        <summaryFilterItems>
            <field>DF_EventAttendee__c.Event_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>DF_EventAttendee__c.DF_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Champions_Attended__c</fullName>
        <label>Number Of Champions Booked</label>
        <summaryForeignKey>DF_EventAttendee__c.DF_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Friends Logged</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Places__c</fullName>
        <label>Total session audience capacity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Organisation</label>
        <referenceTo>Partner_Organisation__c</referenceTo>
        <relationshipLabel>DF Events</relationshipLabel>
        <relationshipName>DF_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postcode_Ward__c</fullName>
        <label>Postcode Ward</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_1_Date__c</fullName>
        <label>Preference 1: Date</label>
        <type>Date</type>
    </fields>
</CustomObject>